--- a/app/views/static_pages/_navigation.html.erb
+++ b/app/views/static_pages/_navigation.html.erb
@@ -9,6 +9,7 @@
     <%=link_to 'Attribution Scholarship', scholarship_path, class: "nav-item nav-link" %>
     <%=link_to 'Related Sites', sites_path, class: "nav-item nav-link" %>
     <%=link_to 'Contact Us', contact_path, class: "nav-item nav-link"%>
+    <%=link_to 'Submissions', 'https://submit.curranindex.org/submissions', class: "nav-item nav-link" %>
 </nav>
 </div>
 
